header and logo atributes in html and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
-header{
 
+
+header{
+    background-color: cornflowerblue;
+    background-image: url(../img/pattern.png);
 }
 
 .logo{
-
+    margin-top: 50px;
+    width: 300px;
 }
 
 .newspic{
-    
+
 }
 
 h1{
