--- a/css/style.css
+++ b/css/style.css
@@ -30,17 +30,26 @@ h3{
 }
 
 span{
+    font-size: 10px;
+    
+}
 
+table{
+    padding: 0;
+    margin: 0;
 }
 
 th{
     background-color: #20a9e5;
     color: #ffffff;
     text-align: left;
+    min-width: 200px;
+    border: none;
 }
 
 tr.even{
-
+    background-color: #ffffff;
+    border:none;
 }
 
 tr.odd{
