--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,19 @@ header{
 }
 
 h1{
-
+    line-height: 30px;
+    margin: 20px 0px 0px 0px;
 }
 
 h2{
-
+    font-size: 14px;
+    margin: 2px;
 }
 
 h3{
-
+    font-size: 10px;
+    margin: 0px;
+    margin-bottom: 10px;
 }
 
 span{
