--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body{
 header{
     background-color: cornflowerblue;
     background-image: url(../img/pattern.png);
-    background-size: 350px;
+    background-size: 345px;
+    background-position-x: -116px;
 }
 
 .logo{
@@ -29,7 +30,7 @@ h2{
 
 h3{
     font-size: 10px;
-    margin: 0px;
+    margin-top: 2px;
     margin-bottom: 10px;
 }
 
@@ -39,8 +40,7 @@ span{
 }
 
 table{
-    padding: 0;
-    margin: 0;
+    border-spacing: 0px;
 }
 
 th{
@@ -61,5 +61,5 @@ tr.odd{
 }
 
 .othernews{
-
+    display: inline-block;
 }
