--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,16 @@ h1{
 
 h2{
     font-size: 14px;
-    margin: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    color: #9b9b9b;
 }
 
 h3{
     font-size: 10px;
     margin-top: 2px;
     margin-bottom: 10px;
+    color: #9b9b9b;
 }
 
 span{
